--- a/commons-lang/pom.xml
+++ b/commons-lang/pom.xml
@@ -12,4 +12,12 @@
     <artifactId>commons-lang</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.5.RELEASE</version>
+        </dependency>
+    </dependencies>
+
 </project>
