--- a/commons-spring/pom.xml
+++ b/commons-spring/pom.xml
@@ -9,6 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>commons-lang</artifactId>
+    <artifactId>commons-spring</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.5.RELEASE</version>
+        </dependency>
+    </dependencies>
 </project>
