--- a/commons-spring/pom.xml
+++ b/commons-spring/pom.xml
@@ -32,5 +32,15 @@
             <artifactId>tomcat-embed-core</artifactId>
             <version>8.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.18.Final</version>
+        </dependency>
     </dependencies>
 </project>
