--- a/commons-lang/pom.xml
+++ b/commons-lang/pom.xml
@@ -11,4 +11,11 @@
 
     <artifactId>commons-lang</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
+    </dependencies>
 </project>
