--- a/commons-spring/pom.xml
+++ b/commons-spring/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-            <version>8.5.6</version>
+            <version>[8.5.55,)</version>
         </dependency>
         <dependency>
             <groupId>jakarta.validation</groupId>
