--- a/commons-http/pom.xml
+++ b/commons-http/pom.xml
@@ -11,5 +11,23 @@
 
     <artifactId>commons-http</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.hb0730</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.11</version>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
 </project>
