--- a/commons-cache/pom.xml
+++ b/commons-cache/pom.xml
@@ -12,7 +12,12 @@
     <artifactId>commons-cache</artifactId>
     <name>${project.artifactId}</name>
 
-
+    <properties>
+        <spring-data-redis.version>2.2.5.RELEASE</spring-data-redis.version>
+        <hutool.version>5.3.9</hutool.version>
+        <guava.version>29.0-jre</guava.version>
+        <jackson.version>2.10.2</jackson.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>com.hb0730</groupId>
@@ -23,28 +28,23 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
-            <version>2.2.5.RELEASE</version>
+            <version>${spring-data-redis.version}</version>
         </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
-            <version>5.3.9</version>
+            <version>${hutool.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>29.0-jre</version>
+            <version>${guava.version}</version>
         </dependency>
         <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.10.2</version>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
