--- a/commons-http/pom.xml
+++ b/commons-http/pom.xml
@@ -11,8 +11,8 @@
 
     <artifactId>commons-http</artifactId>
     <properties>
-        <httpclient-version>4.5.11</httpclient-version>
-        <okhttp3-version>4.0.1</okhttp3-version>
+        <httpclient.version>4.5.11</httpclient.version>
+        <okhttp3.version>4.0.1</okhttp3.version>
     </properties>
 
     <dependencies>
@@ -25,13 +25,13 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>${httpclient-version}</version>
+            <version>${httpclient.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>${okhttp3-version}</version>
+            <version>${okhttp3.version}</version>
             <optional>true</optional>
         </dependency>
     </dependencies>
