--- a/commons-lang/pom.xml
+++ b/commons-lang/pom.xml
@@ -11,11 +11,15 @@
 
     <artifactId>commons-lang</artifactId>
 
+    <properties>
+        <commons-lang3.version>3.9</commons-lang3.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.9</version>
+            <version>${commons-lang3.version}</version>
         </dependency>
     </dependencies>
 </project>
