--- a/commons-spring/pom.xml
+++ b/commons-spring/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>commons-spring</artifactId>
+    <properties>
+        <spring-context.version>5.0.5.RELEASE</spring-context.version>
+        <spring-web.version>5.0.5.RELEASE</spring-web.version>
+        <tomcat-embed-core.version>[8.5.55,)</tomcat-embed-core.version>
+        <validation-api.version>2.0.2</validation-api.version>
+        <hibernate-validtor.version>6.0.18.Final</hibernate-validtor.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -20,27 +27,27 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.0.5.RELEASE</version>
+            <version>${spring-context.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>5.0.5.RELEASE</version>
+            <version>${spring-web.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-            <version>[8.5.55,)</version>
+            <version>${tomcat-embed-core.version}</version>
         </dependency>
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
-            <version>2.0.2</version>
+            <version>${validation-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>6.0.18.Final</version>
+            <version>${hibernate-validtor.version}</version>
         </dependency>
     </dependencies>
 </project>
