--- a/commons-http-test/pom.xml
+++ b/commons-http-test/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.5.RELEASE</version>
+        <artifactId>commons-test-parent</artifactId>
+        <groupId>com.hb0730</groupId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.hb0730</groupId>
+
     <artifactId>commons-http-test</artifactId>
     <name>${project.artifactId}</name>
     <version>1.0.0-SNAPSHOT</version>
