--- a/commons-lang/pom.xml
+++ b/commons-lang/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <artifactId>commons-parent</artifactId>
         <groupId>com.hb0730</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-RELEASE</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
