--- a/commons-test/pom.xml
+++ b/commons-test/pom.xml
@@ -53,6 +53,11 @@
                 <artifactId>httpclient</artifactId>
                 <version>4.5.11</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents.client5</groupId>
+                <artifactId>httpclient5</artifactId>
+                <version>5.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
