fix apache httpclient async request

--- a/commons-http-test/src/main/resources/application.yml
+++ b/commons-http-test/src/main/resources/application.yml
@@ -2,4 +2,7 @@ spring:
   application:
     name: http-test
 server:
-  port: ${random.int(100,10000)}
+  port: 10000
+logging:
+  level:
+    org.apache.hc: debug
