--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <artifactId>commons-parent</artifactId>
     <version>1.0.1-SNAPSHOT</version>
 
-    <name>hb0730</name>
+    <name>hb0730-parent</name>
     <description>hb0730-commons主要是个人常用类库</description>
     <url>https://github.com/hb0730/hb0730-commons</url>
 
