--- a/commons-http/pom.xml
+++ b/commons-http/pom.xml
@@ -10,10 +10,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.hb0730</groupId>
     <artifactId>commons-http</artifactId>
-    <version>${project.parent.version}</version>
 
+    <name>${project.artifactId}</name>
     <url>https://github.com/hb0730/hb0730-commons</url>
     <description>对http的封装，支持HTTPClient，Okhttp3等</description>
     <properties>
