--- a/commons-all/pom.xml
+++ b/commons-all/pom.xml
@@ -36,5 +36,10 @@
             <artifactId>commons-spring</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.hb0730</groupId>
+            <artifactId>commons-json</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 </project>
