--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>commons-spring</module>
         <module>commons-dependencies</module>
         <module>commons-all</module>
+        <module>commons-json</module>
     </modules>
 
     <groupId>com.hb0730</groupId>
