--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,15 @@
 language: java
 jdk:
   - openjdk8
-before_install:
-  - export TZ=Asia/Shanghai
-cache:
-  directories:
-    - $HOME/.m2/repository
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
-notifications:
-  email: false
-jobs:
-  include:
-    - stage: test
-      name: "maven build"
-      script: mvn clean install  -DskipTests=true -Dmaven.javadoc.skip=true -Dpgp-skip=true -B -V
-    - stage: release
-      name: "maven install release"
-      script: echo "Deploying to GitHub releases ..." && pwd
-      deploy:
-        provider: releases
-        api_key: $GITHUB_OAUTH_TOKEN
-        skip_cleanup: true
-        on:
-          tags: true
-
-stages:
-  - test
-  - name: release
-    if: tag =~ /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+script: "mvn clean package -DskipTests=true -Dcheckstyle.skip=true"
 
 branches:
   only:
-    - master
-    - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+    - dev
 
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+
+notifications:
+  email: false
