--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: java
 jdk:
   - openjdk8
-script: "mvn clean package -DskipTests=true -Dcheckstyle.skip=true"
-
+script:
+  - export TZ=Asia/Shanghai
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn cobertura:cobertura -Dcobertura.report.format=xml -Dmaven.javadoc.skip.true
 branches:
   only:
     - dev
-
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 cache:
   directories:
     - '$HOME/.m2/repository'
