--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,9 @@ jdk:
   - openjdk8
 script:
   - export TZ=Asia/Shanghai
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn clean package -DskipTests=true -Dmaven.javadoc.skip=true -B -V
   - mvn cobertura:cobertura -Dcobertura.report.format=xml -Dmaven.javadoc.skip.true
-branches:
-  only:
-    - dev
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 cache:
