--- a/commons-lang/pom.xml
+++ b/commons-lang/pom.xml
@@ -17,9 +17,14 @@
     <description>常用工具类库</description>
 
     <properties>
-        <commons-lang3.version>3.9</commons-lang3.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.30</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
