--- a/commons-dependencies/pom.xml
+++ b/commons-dependencies/pom.xml
@@ -71,6 +71,11 @@
                 <artifactId>commons-json</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.hb0730</groupId>
+                <artifactId>commons-encrypt</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
