--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
 script:
   - export TZ=Asia/Shanghai
   - mvn clean package -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-  - mvn cobertura:cobertura -Dcobertura.report.format=xml -Dmaven.javadoc.skip.true
+  - mvn cobertura:cobertura -Dcobertura.report.format=xml -Dmaven.javadoc.skip.true -Dorg.slf4j.simpleLogger.defaultLogLevel=error
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
