--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 language: java
 jdk:
   - openjdk8
-script:
-  - export TZ=Asia/Shanghai
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
 cache:
   directories:
     - '$HOME/.m2/repository'
 
 notifications:
   email: false
+
+script:
+  - export TZ=Asia/Shanghai
 
 jobs:
   include:
@@ -31,9 +30,12 @@ jobs:
 stages:
   - build
   - name: GitHub Release
-    if tag= ~ /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+    if: tag= ~ /^v\d+\.\d+(\.\d+)?(-\S*)?$/
 branches:
   only:
     - master
     - dev
     - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
