优化json创建以及多json优选

--- a/commons-json/pom.xml
+++ b/commons-json/pom.xml
@@ -45,5 +45,11 @@
             <version>${jackson.version}</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.30</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
