--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,13 @@ cache:
 notifications:
   email: false
 
-script:
+before_install:
   - export TZ=Asia/Shanghai
 
 jobs:
   include:
     - stage: build
+      name: "maven build"
       script:
         - mvn clean package -DskipTests=true -Dmaven.javadoc.skip=true -B -V
         - mvn cobertura:cobertura -Dcobertura.report.format=xml -Dmaven.javadoc.skip.true -Dorg.slf4j.simpleLogger.defaultLogLevel=error
@@ -30,7 +31,7 @@ jobs:
 stages:
   - build
   - name: GitHub Release
-    if: tag= ~ /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+      if: tag =~ /^v\d+\.\d+(\.\d+)?(-\S*)?$/
 branches:
   only:
     - master
