--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>commons-all</module>
         <module>commons-json</module>
         <module>commons-encrypt</module>
+        <module>commons-mail</module>
     </modules>
 
     <groupId>com.hb0730</groupId>
@@ -31,6 +32,7 @@
         <compile.version>8</compile.version>
         <junit.version>4.13</junit.version>
         <lombok.version>1.18.12</lombok.version>
+        <jakarta-mail.version>1.6.5</jakarta-mail.version>
     </properties>
 
     <dependencies>
@@ -50,6 +52,12 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>${jakarta-mail.version}</version>
         </dependency>
     </dependencies>
 
