--- a/commons-cache-test/pom.xml
+++ b/commons-cache-test/pom.xml
@@ -20,6 +20,7 @@
         <artifactId>commons-test-parent</artifactId>
         <groupId>com.hb0730</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../commons-test/pom.xml</relativePath>
     </parent>
 
     <artifactId>commons-cache-test</artifactId>
