--- a/commons-http-test/pom.xml
+++ b/commons-http-test/pom.xml
@@ -19,6 +19,7 @@
         <artifactId>commons-test-parent</artifactId>
         <groupId>com.hb0730</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../commons-test/pom.xml</relativePath>
     </parent>
 
     <artifactId>commons-http-test</artifactId>
