--- a/commons-spring-test/pom.xml
+++ b/commons-spring-test/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>commons-test-parent</artifactId>
         <groupId>com.hb0730</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../commons-test/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>commons-spring-test</artifactId>
@@ -13,8 +14,6 @@
     <name>${project.artifactId}</name>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <properties>
-    </properties>
 
     <dependencies>
         <dependency>
