--- a/commons-test/pom.xml
+++ b/commons-test/pom.xml
@@ -39,7 +39,7 @@
             <dependency>
                 <groupId>com.hb0730</groupId>
                 <artifactId>commons-dependencies</artifactId>
-                <version>2.0.0-RELEASE</version>
+                <version>2.0.2-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
