--- a/commons-spring/pom.xml
+++ b/commons-spring/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>commons-parent</artifactId>
         <groupId>com.hb0730</groupId>
-        <version>2.0.1-RELEASE</version>
+        <version>2.0.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
