--- a/commons-test/pom.xml
+++ b/commons-test/pom.xml
@@ -25,7 +25,7 @@
         <compile.version>8</compile.version>
         <junit.version>4.13.1</junit.version>
         <lombok.version>1.18.12</lombok.version>
-        <commons.version>1.0.0-SNAPSHOT</commons.version>
+        <commons.version>2.0.3-SNAPSHOT</commons.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -39,7 +39,7 @@
             <dependency>
                 <groupId>com.hb0730</groupId>
                 <artifactId>commons-dependencies</artifactId>
-                <version>2.0.1-RELEASE</version>
+                <version>${commons.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
