--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>com.hb0730</groupId>
     <artifactId>commons-parent</artifactId>
-    <version>2.0.4-SNAPSHOT</version>
+    <version>2.0.4-RELEASE</version>
     <name>hb0730-parent</name>
     <description>hb0730-commons主要是个人常用类库</description>
     <url>https://github.com/hb0730/hb0730-commons</url>
