--- a/.github/workflows/gitee-sync.yml
+++ b/.github/workflows/gitee-sync.yml
@@ -1,8 +1,5 @@
 name: Gitee repos mirror periodic job
-on:
-  push:
-    branches:
-      - '**'
+on: [ push ]
 jobs:
   sync:
     runs-on: ubuntu-latest
