--- a/.github/workflows/commons.yml
+++ b/.github/workflows/commons.yml
@@ -69,8 +69,8 @@ jobs:
           mvn cobertura:cobertura -Dcobertura.report.format=xml -Dmaven.javadoc.skip.true -Dorg.slf4j.simpleLogger.defaultLogLevel=error
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
-  codacy-security-scan:
-     name: Codacy Security Scan
+  codacy-analysis-cli:
+     name: Codacy Analysis CLI
      runs-on: ubuntu-latest
      needs: codecov
      steps:
@@ -82,6 +82,7 @@ jobs:
            tool: Codacy-Analysis-CLI
            project-token: ${{secrets.CODACY_PROJECT_TOKEN}}
            upload: true
+           max-allowed-issues: 2147483647
 
   github-release:
     runs-on: ubuntu-latest
