--- a/.github/workflows/commons.yml
+++ b/.github/workflows/commons.yml
@@ -86,7 +86,7 @@ jobs:
 
   github-release:
     runs-on: ubuntu-latest
-    needs: codacy-security-scan
+    needs: codacy-analysis-cli
     if: ${{contains(github.ref,'tags')}}
     steps:
       - uses: actions/checkout@v2
