--- a/.github/workflows/commons.yml
+++ b/.github/workflows/commons.yml
@@ -81,6 +81,9 @@ jobs:
          with:
            project-token: ${{secrets.CODACY_PROJECT_TOKEN}}
            verbose: true
+           output: results.sarif
+           format: sarif
+           gh-code-scanning-compat: true
            upload: true
            max-allowed-issues: 2147483647
 
