--- a/.github/workflows/commons.yml
+++ b/.github/workflows/commons.yml
@@ -87,7 +87,7 @@ jobs:
            upload: true
            max-allowed-issues: 2147483647
        - name: Upload SARIF results file
-         uses: github/codeql-action/upload-sarif@master
+         uses: github/codeql-action/upload-sarif@v1
          with:
            sarif_file: results.sarif
 
