--- a/commons-cache/pom.xml
+++ b/commons-cache/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>commons-parent</artifactId>
         <groupId>com.hb0730</groupId>
-        <version>2.1.0-SNAPSHOT</version>
+        <version>2.1.0-RELEASE</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -20,7 +20,7 @@
     <properties>
         <spring-data-redis.version>2.2.5.RELEASE</spring-data-redis.version>
         <guava.version>29.0-jre</guava.version>
-        <jackson.version>2.10.2</jackson.version>
+        <jackson.version>2.10.5.1</jackson.version>
         <jedis.version>3.1.0</jedis.version>
     </properties>
     <dependencies>
