--- a/commons-dependencies/pom.xml
+++ b/commons-dependencies/pom.xml
@@ -80,6 +80,11 @@
                 <artifactId>commons-mail</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.hb0730</groupId>
+                <artifactId>commons-ssh</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
