add scm modules

--- a/commons-all/pom.xml
+++ b/commons-all/pom.xml
@@ -57,5 +57,10 @@
             <artifactId>commons-ssh</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.hb0730</groupId>
+            <artifactId>commons-scm</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 </project>
