--- a/.github/workflows/commons.yml
+++ b/.github/workflows/commons.yml
@@ -64,7 +64,7 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: mvn install -Dmaven.javadoc.skip=true -B -V
+        run: mvn clean install -Dmaven.javadoc.skip=true -B -V
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
