--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,15 +5,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ 1.8 ]
+        java: [ 8 ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set up JDK ${{matrix.java}}
         uses: actions/setup-java@v2
         with:
+          distribution: 'Zulu'
           java-version: ${{matrix.java}}
-      - name:  Cache Maven
+      - name: Cache Maven
         uses: actions/cache@v2
         with:
           path: ~/.m2/repository
