--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -1,5 +1,19 @@
 name: cadacy analysis CI
-on: [ push,pull_request ]
+on:
+  push:
+    paths:
+      - '**'
+      - '!**.md'
+      - '!**.yml'
+      - '!**.yaml'
+    branches:
+      - '**'
+  pull_request:
+    paths:
+      - '**'
+      - '!**.md'
+      - '!**.yml'
+      - '!**.yaml'
 jobs:
   codacy-analysis-cli:
     name: Codacy Analysis CLI
