--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,19 @@
 name: build
-on: [ push,pull_request ]
+on:
+  push:
+    paths:
+      - '**'
+      - '!**.md'
+      - '!**.yml'
+      - '!**.yaml'
+    branches:
+      - '**'
+  pull_request:
+    paths:
+      - '**'
+      - '!**.md'
+      - '!**.yml'
+      - '!**.yaml'
 jobs:
   build:
     runs-on: ubuntu-latest
